<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView

                android:layout_gravity="center_horizontal"
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/endava_logo" />

            <TextView
                android:id="@+id/textView"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/libraryText"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/roboto_condensed_bold_italic"
                android:textSize="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <Button
                android:id="@+id/addBookButton"
                android:background="@drawable/button_pressed"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_plus_solid"
                android:text="@string/plus_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#757575"
                android:fontFamily="@font/ubuntu_light" />

            <Button
                android:background="@drawable/button_pressed"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_search_solid"
                android:text="@string/search_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#757575"
                android:fontFamily="@font/ubuntu_light" />

            <Button
                android:background="@drawable/button_pressed"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_sync_alt_solid"
                android:text="@string/update_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#757575"
                android:fontFamily="@font/ubuntu_light" />

            <Button
                android:background="@drawable/button_pressed"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_trash_alt_solid"
                android:text="@string/delete_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#757575"
                android:fontFamily="@font/ubuntu_light" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>